# CRC_HACK

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Main.cbp  MainProgram  Makefile  README.md  cmake_install.cmake  crc.cpp  crc.h  main.cpp
.cmake/api/v1/reply/: cache-v2-2f070ddcdabe5afc99ae.json  cmakeFiles-v1-22ebb3c99c6bea066f82.json  codemodel-v2-fdc3b5ac5adb6ee8090c.json  directory-googletest.googlemock-Debug-ec0e932ea91c84d2e321.json  directory-googletest.googletest-Debug-5579b311e6bc60bb6fb4.json  index-2022-10-01T10-12-46-0343.json  target-ExampleTest-Debug-dd41978f82f15daee454.json  target-Main-Debug-528da34c6d49bc1e2153.json  target-MainProgram-Debug-cd531c90f5cf0a96effd.json  target-gmock-Debug-47ca5a7aa3a60a99a480.json  target-gmock_main-Debug-8e3d13d901dbb2d74d4c.json  target-gtest_main-Debug-ed223ef7594de1562ffe.json  target-my_parallel_build-Debug-de534a32b92c7140ce3a.json
tests/: CMakeLists.txt  CTestTestfile.cmake  ExampleTest  Makefile  tests.cpp
